--- a/Fundamentals/Web.config
+++ b/Fundamentals/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<configSections>
-		<section name="redirects" type="Fundamentals.Configurations.RedirectSection"/>
+		<section name="redirects" type="LifeCycle.Configurations.RedirectSection"/>
 	</configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,7 +19,7 @@
   </system.web>
   <system.webServer>
 	  <modules>
-		  <add name="Redirect" type="Fundamentals.Extensions.RedirectModule"/>
+		  <add name="Redirect" type="LifeCycle.Extensions.RedirectModule"/>
 	  </modules>
   </system.webServer>
   <runtime>
