--- a/Fundamentals/Views/Web.config
+++ b/Fundamentals/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="Fundamentals" />
+        <add namespace="LifeCycle" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
