--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /Books/Books.Web/obj
 /AuthenticationRisk/AuthenticationRisk/bin
 /AuthenticationRisk/AuthenticationRisk/obj
+/Fundamentals/CRUD/bin
+/Fundamentals/CRUD/obj
+/Fundamentals/LifeCycle/bin
+/Fundamentals/LifeCycle/obj
